_sass/_code.scss
code {
  background-color: var(--code-background-color);
  color: var(--code-color);
  padding: 0.2em 0.4em;
  font-family: var(--code-font-family);
  border-radius: 3px;
}

a code {
  background-color: inherit;
  color: inherit;
  padding: 0;
}

h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
  background-color: var(--body-background-color);
  color: var(--body-color);
  padding: 0;
}

pre {
  border: 1px solid var(--pre-code-background-color);  /* Invisible border used with vertical rhythm debugging lines. */
  padding-top: calc(var(--body-line-height) - 1px);
  padding-bottom: calc(var(--body-line-height) - 1px);
  padding-left: calc(var(--body-line-height) * 0.5);
  padding-right: calc(var(--body-line-height) * 0.5);
  overflow: auto;
}

.inner-container pre {
  border-radius: 4px;
}

pre,
pre code {
  color: var(--pre-code-color);
  background-color: var(--pre-code-background-color);
}

pre code {
  padding: 0;
  white-space: pre;
}

/** Fix code blocks created with Jekyll's {% highlight %} tag.
 *  It outputs:
 *    <figure class="highlight">
 *      <pre>
 *        <code>
 *          <table>
 *            <tbody>
 *              <tr>
 *              <td>
 *                <pre>
 *  See https://github.com/jekyll/jekyll/issues/6448 */
figure.highlight > pre {
  padding: 0;
}
figure.highlight pre {
  margin: 0;
}

